--- a/File.Service.WebApi/packages.config
+++ b/File.Service.WebApi/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="JWT" version="5.1.1" targetFramework="net462" />
   <package id="log4net" version="2.0.8" targetFramework="net462" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.4" targetFramework="net462" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.4" targetFramework="net462" />
