--- a/File.Service.WebApi/Web.config
+++ b/File.Service.WebApi/Web.config
@@ -4,6 +4,10 @@
   https://go.microsoft.com/fwlink/?LinkId=301879
   -->
 <configuration>
+  <configSections>
+    <section name="fileServerConfig" type="EM.Management.Web.Api.Configuration.FileServerConfigurationSection,EM.Management.Web.Api"/>
+  </configSections>
+  <fileServerConfig writeDir="d:\files\" name="127.0.0.1:5700"/>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -39,7 +43,7 @@
       </dependentAssembly>      
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" culture="neutral" publicKeyToken="30ad4fe6b2a6aeed" />
-        <bindingRedirect oldVersion="0.0.0.0-11.0.0.0" newVersion="11.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Optimization" publicKeyToken="31bf3856ad364e35" />
