--- a/File.Service.WebApi/File.Service.WebApi.csproj
+++ b/File.Service.WebApi/File.Service.WebApi.csproj
@@ -95,6 +95,7 @@
     <Compile Include="Helper\JsonResultExtension.cs" />
     <Compile Include="Helper\JsonResultDataExtension.cs" />
     <Compile Include="Models\FileInfo.cs" />
+    <Compile Include="Helper\PostFileExtension.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StatusCodes.cs" />
   </ItemGroup>
