--- a/File.Service.WebApi/Web.config
+++ b/File.Service.WebApi/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <configSections>
-    <section name="fileServerConfig" type="EM.Management.Web.Api.Configuration.FileServerConfigurationSection,EM.Management.Web.Api"/>
+    <section name="fileServerConfig" type="File.Service.WebApi.FileServerConfigurationSection,File.Service.WebApi"/>
   </configSections>
   <fileServerConfig writeDir="d:\files\" name="127.0.0.1:5700"/>
   <appSettings>
