--- a/Backend.File.Web.Api/Web.config
+++ b/Backend.File.Web.Api/Web.config
@@ -5,9 +5,9 @@
   -->
 <configuration>
   <configSections>
-    <section name="fileServerConfig" type="File.Service.WebApi.FileServerConfigurationSection,File.Service.WebApi"/>
+    <section name="fileServerConfig" type="Backend.File.Web.FileServerConfigurationSection,Backend.File.Web.Api" />
   </configSections>
-  <fileServerConfig writeDir="d:\files\" name="127.0.0.1:5700"/>
+  <fileServerConfig writeDir="d:\files\" name="127.0.0.1:5700" />
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -21,16 +21,16 @@
     </httpModules>
   </system.web>
   <system.webServer>
-    <handlers>
+    
+    <modules>
+    </modules>
+    <validation validateIntegratedModeConfiguration="false" />
+  <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    </handlers>
-    <modules>
-    </modules>
-    <validation validateIntegratedModeConfiguration="false" />
-  </system.webServer>
+    </handlers></system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -52,6 +52,18 @@
       <dependentAssembly>
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="0.0.0.0-1.6.5135.21930" newVersion="1.6.5135.21930" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Http" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Autofac" publicKeyToken="17863af14b0044da" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.9.2.0" newVersion="4.9.2.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
