--- a/Backend.File.Web.Api/Web.config
+++ b/Backend.File.Web.Api/Web.config
@@ -13,6 +13,8 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="RedisServer" value="127.0.0.1:6379" />
+    <add key="innerAuthBaseUrl" value="http://127.0.0.1:5801"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.2" />
