--- a/Backend.File.Web.Api/Web.config
+++ b/Backend.File.Web.Api/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <configSections>
-    <section name="fileServerConfig" type="Backend.File.Web.FileServerConfigurationSection,Backend.File.Web.Api" />
+    <section name="fileServerConfig" type="Backend.File.FileServerConfigurationSection,Backend.File.Core" />
   </configSections>
   <fileServerConfig writeDir="d:\files\" name="127.0.0.1:5700" />
   <appSettings>
@@ -14,7 +14,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="RedisServer" value="127.0.0.1:6379" />
-    <add key="innerAuthBaseUrl" value="http://127.0.0.1:5801"/>
+    <add key="innerAuthBaseUrl" value="http://127.0.0.1:6101"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.2" />
