--- a/Backend.File.Test/Backend.File.Test.csproj
+++ b/Backend.File.Test/Backend.File.Test.csproj
@@ -4,15 +4,16 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{FEE92E8F-85D3-414A-96A6-11BF57AAA3ED}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Backend.File.Core</RootNamespace>
-    <AssemblyName>Backend.File.Core</AssemblyName>
+    <ProjectGuid>{31B2420B-7893-4126-97A7-AEF8747F45BF}</ProjectGuid>
+    <OutputType>Exe</OutputType>
+    <RootNamespace>Backend.File.Test</RootNamespace>
+    <AssemblyName>Backend.File.Test</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -22,6 +23,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -34,22 +36,24 @@
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Drawing" />
+    <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
-    <Reference Include="System.Web" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Base64File.cs" />
-    <Compile Include="FileInfo.cs" />
-    <Compile Include="FileServerConfigurationSection.cs" />
-    <Compile Include="Helper\ImageExtensions.cs" />
-    <Compile Include="Helper\PostFileExtension.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Microcomm.Core\Microcomm.Core\Microcomm.Core.csproj">
       <Project>{d6c9ecc1-24cb-4b77-88b9-b706e63963b0}</Project>
       <Name>Microcomm.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Backend.File.Core\Backend.File.Core.csproj">
+      <Project>{fee92e8f-85d3-414a-96a6-11bf57aaa3ed}</Project>
+      <Name>Backend.File.Core</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
