--- a/Backend.File.Test2/packages.config
+++ b/Backend.File.Test2/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.AspNet.WebApi.Client" version="4.0.30506.0" targetFramework="net461" />
   <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net461" />
   <package id="System.Net.Http" version="2.0.20710.0" targetFramework="net461" />
+  <package id="System.Net.Http.Formatting.Extension" version="5.2.3.0" targetFramework="net461" />
 </packages>
