--- a/Backend.File.Web.Api/Web.config
+++ b/Backend.File.Web.Api/Web.config
@@ -18,12 +18,16 @@
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.2" />
-    <httpRuntime targetFramework="4.6.2" />
+    <httpRuntime targetFramework="4.6.2" maxRequestLength="10485760"/>
     <httpModules>
     </httpModules>
   </system.web>
   <system.webServer>
-    
+    <security>
+      <requestFiltering>
+        <requestLimits maxAllowedContentLength="1048576000" />
+      </requestFiltering>
+    </security>
     <modules>
     </modules>
     <validation validateIntegratedModeConfiguration="false" />
