提交一些代码

--- a/Backend.File.Web.Api/Web.config
+++ b/Backend.File.Web.Api/Web.config
@@ -15,6 +15,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="RedisServer" value="127.0.0.1:6379" />
     <add key="innerAuthBaseUrl" value="http://127.0.0.1:6101" />
+    <add key="ipWhiteList" value="172.31.32.84"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.2" />
